# AI_film

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUTOMATED_WORKFLOW_GUIDE.md  AUTOMATIC_COMFYUI_SETUP.md  AUTOMATION_COMPLETE.md  AUTOMATION_COMPLETE_GUIDE.md  CHANGELOG.md  CICD_COLAB_SETUP.md  CICD_IMPLEMENTATION_SUMMARY.md  CICD_SETUP.md  CODE_OF_CONDUCT.md  CODIGO_DE_CONDUTA.md  COLAB_AUTOMATION_TROUBLESHOOTING.md  COLAB_AUTOSTART.md  COLAB_AUTO_START_GUIDE.md  COLAB_CLOUDFLARE_SETUP.md  COLAB_GPU_SETUP.md  COLAB_QUICK_START.md  COLAB_SECRETS_GUIDE.md  COMPLETE_WORKFLOW_GUIDE.md  CONTRIBUTING.md  CONVERSATION_SUMMARY.md  COURSE_MCP_README.md  DEPLOYMENT_COMPLETE.md  DEPLOY_STATUS.md  DOCKER-README.md  FINAL_SUMMARY.md  FIRST_DEPLOY.md  FIX_GITHUB_TOKEN_401.md  GUIA_REATIVACAO_COMFYUI.md  HUGGINGFACE_COMFYUI_SETUP.md  HUGGINGFACE_GRADIO_SETUP.md  INTEGRATION_GUIDE.md  K8S_ARCHITECTURE.md  KUBERNETES_SETUP.md  MANUAL_COLAB_START.md  MANUAL_MINIKUBE_SETUP.md  MELHORIAS_IMPLEMENTADAS.md  (+58 more)
app/: __init__.py  main.py
colab/: README.md  colab_simple_version.py  colab_with_flask_ui.py
docker/: check_dependencies.py
docs/: ADD_GITHUB_SECRET.md  GEMINI_MIGRATION.md  INTERACTIVE_PIPELINE.md  visual_quality_target.md
huggingface_space/: Dockerfile  README.md
k8s/: Makefile  deploy-dev.yaml  deploy.sh  ingress.yaml  namespace.yaml
open3d_implementation/: .env.example  __init__.py  ui_server.py
orchestration/: enhanced_dagster_pipeline.py  llm_config.py
runpod_worker/: .dockerignore  Dockerfile  start_ai_film.sh  validate_custom_nodes.py
script/: start_services.sh
scripts/: README.md  auto_deploy.py  build_runpod_worker.sh  install_dependencies.sh  monitor_cloudflare.py  print_runpod_controlnet_install_command.py  runpod_controlnet_pod.py  runpod_download_hf_model.sh  runpod_endpoint_control.py  runpod_prepare_controlnet_volume.sh  runpod_prepare_flux2_volume.sh  runpod_prepare_ipadapter_volume.sh  smoke_comfyui_controlnet_retry.py  smoke_comfyui_flux2_klein.py  smoke_comfyui_ipadapter_sequence.py  smoke_comfyui_qwen_edit_2511.py  update_comfyui_url.py  (+2 more)
(+61 files in other folders)
