[project]
name = "langgraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.3",
    "elevenlabs>=1.58.1",
    "fastapi>=0.104.1",
    "flask>=3.1.1",
    "mcp[cli]>=1.8.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "flake8==7.1.1",
    "pytest==8.3.4",
    "pytest-cov==5.0.0",
]
blender = [
    "bpy",
]
