[project]
name = "langgraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.3",
    "elevenlabs>=1.58.1",
    "flask>=3.1.1",
    "logging>=0.4.9.6",
    "google-genai>=1.0.0",
    "langchain-google-genai>=2.1.5,<3.0.0",
    "mcp[cli]>=1.8.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
blender = [
    "bpy",
]
