[project]
name = "langgraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.3",
    "dagster>=1.11.4,<2.0.0",
    "elevenlabs>=1.58.1",
    "flask>=3.1.1",
    "google-genai>=1.0.0",
    "google-api-python-client>=2.170.0,<3.0.0",
    "google-auth-oauthlib>=1.2.2,<2.0.0",
    "langchain-google-genai>=2.1.5,<3.0.0",
    "mcp[cli]>=1.8.1",
    "openai>=1.93.0,<2.0.0",
    "pillow>=10.4.0,<12.0.0",
    "runwayml>=3.0.0,<4.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
blender = [
    "bpy>=4.2,<5.1; python_version >= '3.11' and python_version < '3.12'",
]
dev = [
    "black==24.10.0",
    "pytest>=8.3,<9",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "integration: calls an external provider and may consume quota or require credentials",
    "destructive: performs an external side effect such as publishing or uploading media",
]
